--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "org.sakana.weatherforecast"
+        applicationId "ge.nsakandelidze.weatherforecast"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
